# Atlas

./: .gitignore  ATLAS_FINAL_PROJECT_REPORT.docx  ATLAS_FINAL_PROJECT_REPORT.md  ATLAS_FULL_PROJECT.md  UR3_ROS2_Technical_Report.docx  atlas readme  atlas_agv.urdf.xacro  atlas_control_center.py  atlas_full.launch.py  generate_report.py  install_atlas_gui.sh  maniskill_quickstart.md  mission_node.py  warehouse.world
agvpicker/: README.md  run_agvpicker.sh  setup_agvpicker.sh
agvpicker/src/agvpicker_bringup/: CMakeLists.txt  package.xml
agvpicker/src/agvpicker_bringup/launch/: agvpicker_full.launch.py
agvpicker/src/agvpicker_control/: CMakeLists.txt  package.xml
agvpicker/src/agvpicker_control/config/: ros2_controllers.yaml
agvpicker/src/agvpicker_control/launch/: controllers.launch.py
agvpicker/src/agvpicker_description/: CMakeLists.txt  package.xml
agvpicker/src/agvpicker_description/launch/: display.launch.py
agvpicker/src/agvpicker_description/rviz/: display.rviz
agvpicker/src/agvpicker_description/urdf/: agvpicker.urdf.xacro
agvpicker/src/agvpicker_gazebo/: CMakeLists.txt  package.xml
agvpicker/src/agvpicker_gazebo/launch/: gazebo.launch.py
agvpicker/src/agvpicker_gazebo/worlds/: arm_table.world
agvpicker/src/agvpicker_moveit_config/: CMakeLists.txt  package.xml
agvpicker/src/agvpicker_moveit_config/config/: joint_limits.yaml
agvpicker/src/agvpicker_moveit_config/launch/: moveit.launch.py
agvpicker/src/agvpicker_moveit_config/srdf/: agvpicker.srdf
atlasarm6/: README.md  run_atlasarm6.sh  setup_atlasarm6.sh
atlasarm6/src/atlasarm6_bringup/: CMakeLists.txt  package.xml
atlasarm6/src/atlasarm6_bringup/launch/: atlasarm6_full.launch.py
atlasarm6/src/atlasarm6_control/: CMakeLists.txt  package.xml
atlasarm6/src/atlasarm6_control/launch/: controllers.launch.py
atlasarm6/src/atlasarm6_description/: CMakeLists.txt  package.xml
atlasarm6/src/atlasarm6_description/launch/: display.launch.py
atlasarm6/src/atlasarm6_description/urdf/: atlasarm6.urdf.xacro
atlasarm6/src/atlasarm6_gazebo/: CMakeLists.txt  package.xml
atlasarm6/src/atlasarm6_gazebo/launch/: gazebo.launch.py
atlasarm6/src/atlasarm6_gazebo/worlds/: arm_table.world
atlasarm6/src/atlasarm6_moveit_config/: CMakeLists.txt  package.xml
atlasarm6/src/atlasarm6_moveit_config/config/: moveit_controllers.yaml  ompl_planning.yaml
atlasarm6/src/atlasarm6_moveit_config/launch/: moveit.launch.py
atlasarm6/src/atlasarm6_moveit_config/srdf/: atlasarm6.srdf
atlasarm6_install/: README.md  create_workspace.sh  fix_atlasarm6.sh  fix_launch_files.sh  install.sh
reports/: ATLAS_AGV_SIMULATION_TO_PHYSICAL_CONVERSION_REPORT.md  ATLAS_WAREHOUSE_AGV_COMPLETE_ENGINEERING_DISSERTATION.md  README.md  convert_reports.sh
src/atlas_mission_manager/: package.xml  setup.py
src/atlas_mission_manager/atlas_mission_manager/: atlas_gui.py
src/atlas_mission_manager/atlas_mission_manager/gui/: __init__.py  main_window.py  ros_bridge.py  theme.py  widgets.py
