<?xml version="1.0"?>
<package format="3">
  <name>agvpicker_bringup</name>
  <version>1.0.0</version>
  <description>AGVPicker master bringup — one command launches everything</description>
  <maintainer email="agvpicker@dev.local">atlas</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>agvpicker_description</exec_depend>
  <exec_depend>agvpicker_control</exec_depend>
  <exec_depend>agvpicker_gazebo</exec_depend>
  <exec_depend>agvpicker_moveit_config</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <export><build_type>ament_cmake</build_type></export>
</package>
