<?xml version="1.0"?>
<package format="3">
  <name>agvpicker_description</name>
  <version>1.0.0</version>
  <description>AGVPicker robot URDF/Xacro description</description>
  <maintainer email="agvpicker@dev.local">atlas</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <export><build_type>ament_cmake</build_type></export>
</package>
