<?xml version="1.0"?>
<package format="3">
  <name>agvpicker_gazebo</name>
  <version>1.0.0</version>
  <description>Gazebo simulation for AGVPicker</description>
  <maintainer email="agvpicker@dev.local">atlas</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros2_control</exec_depend>
  <exec_depend>agvpicker_description</exec_depend>
  <exec_depend>agvpicker_control</exec_depend>
  <export><build_type>ament_cmake</build_type></export>
</package>
