<?xml version="1.0"?>
<package format="3">
  <name>atlasarm6_bringup</name>
  <version>1.0.0</version>
  <description>AtlasArm-6 master bringup — one command launches everything</description>
  <maintainer email="atlas@dev.local">atlas</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>atlasarm6_description</exec_depend>
  <exec_depend>atlasarm6_control</exec_depend>
  <exec_depend>atlasarm6_gazebo</exec_depend>
  <exec_depend>atlasarm6_moveit_config</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <export><build_type>ament_cmake</build_type></export>
</package>
