<?xml version="1.0"?>
<package format="3">
  <name>atlasarm6_control</name>
  <version>1.0.0</version>
  <description>AtlasArm-6 ros2_control configuration and controllers</description>
  <maintainer email="atlas@dev.local">atlas</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>ros2_control</exec_depend>
  <exec_depend>ros2_controllers</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>gazebo_ros2_control</exec_depend>
  <export><build_type>ament_cmake</build_type></export>
</package>
